--- a/index.html
+++ b/index.html
@@ -34,12 +34,18 @@
       <div class="search-area container">
         <div class="input-group mb-3 m-auto">
             
-            <input type="text" class="form-control" placeholder="&#xf002; Search for Meal" >
-            <button class="btn search-btn" type="button" id="button-addon2">Button</button>
+            <input id="meal-name" type="text" class="form-control" placeholder="&#xf002; Search for Meal" >
+            <button id="serach-meal" class="btn search-btn" type="button" id="button-addon2">Button</button>
           </div>
       </div>
-        </nav>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <div class="container mt-5">
+          <p class="alert">Please type meal !!</p>
+          <div id="meal-section"  class="row d-flex">
+
+          </div>
+        </div>
+        <script src="app.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </body>
 
